--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Games-QuizTaker
-version:      2.0
-version_from: QuizTaker.pm
+version:      2.01
+version_from: lib/Games/QuizTaker.pm
 installdirs:  site
 requires:
     Carp:                          0
