--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Games-QuizTaker
-version:      2.011
+version:      2.1
 version_from: lib/Games/QuizTaker.pm
 installdirs:  site
 requires:
     Carp:                          0
     Fcntl:                         0
     Object::InsideOut:             0
+    Sub::Override:                 0
     Test::Harness:                 0
     Test::More:                    0
     Test::Pod:                     0
